<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.LoginActivity"
        android:orientation="vertical">

    <ImageView android:layout_width="match_parent"
               android:layout_height="wrap_content"
                android:src="@mipmap/brq"
                android:paddingTop="50dp"/>


    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
                android:id="@+id/emailLoginEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/colorAccent"
                android:backgroundTint="@color/colorAccent"
                android:maxLength="200"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="55dp"
                android:layout_marginRight="55dp"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789-.@_Çç"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
                android:id="@+id/senhaLoginEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/senha"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/colorAccent"
                android:backgroundTint="@color/colorAccent"
                android:maxLength="200"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="55dp"
                android:layout_marginRight="55dp"
        />
    </android.support.design.widget.TextInputLayout>

    <Button android:id="@+id/logarButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_padrao"
            android:text="@string/login"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:textColor="@color/colorTextPrimary"/>

    <Button android:id="@+id/novoDevButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorTextPrimary"
            android:text="@string/novoDev"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:textColor="@color/colorAccent"/>

</LinearLayout>