<resources>
    <string name="app_name">ControleTarefas</string>
    <!--Funcionario-->
    <string name="email">e-mail</string>
    <string name="senha">senha</string>
    <string name="senha_masc">*********</string>
    <string name="login">logar</string>
    <string name="nome">nome</string>
    <string name="sobrenome">sobrenome</string>
    <string name="salvar">salvar</string>
    <string name="alterarimagem">Alterar imagem</string>
    <string name="novoDev">Não possuo cadastro</string>
    <string name="cpf">CPF</string>
    <string name="cep">CEP</string>
    <string name="rua">rua</string>
    <string name="bairro">bairro</string>
    <string name="cidade">cidade</string>
    <string name="estado">estado</string>
    <string name="numero">número</string>
    <string name="complemento">complemento</string>
    <string name="descricao">descricao tarefa</string>
    <string name="dataSolicitacao">xx/xx/xxxx</string>
    <string name="dataPrevista">xx/xx/xxxx</string>
    <string name="solicitante">solicitante</string>
    <string name="status">status</string>
    <string name="dataSolicitacaolabel">data da solicitação</string>
    <string name="dataPrevistalabel">data prevista</string>
    <string name="solicitantelabel">solicitante</string>
    <string name="statuslabel">status</string>
    <string name="dtSolicitacao">data da solicitação</string>
    <string name="dtPrevisao">data prevista</string>

    <!--Tarefa-->


</resources>
