...
                android:orientation="vertical">

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:orientation="vertical">

                <ListView android:id="@+id/tarefasListView"
                          android:layout_width="match_parent"
                          android:layout_height="400dp"/>

                <android.support.design.widget.FloatingActionButton
                        android:id="@+id/novaTarefaBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top|end"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="16dp"
                        app:srcCompat="@drawable/ic_note_adddp"
...
