<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.TarefaActivity"
        android:orientation="vertical">
    <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary">
            <ImageButton android:id="@+id/btnBackToList"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@color/colorPrimary"
                    android:src="@drawable/ic_back"/>
            <TextView android:layout_width="100dp"
                      android:layout_height="50dp"
                      android:paddingTop="10dp"
                      android:textColor="@color/colorTextPrimary"
                      android:text="Tarefa"
                      android:textSize="25dp"/>

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
                android:id="@+id/descricaoEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/descricao"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/colorAccent"
                android:backgroundTint="@color/colorAccent"
                android:maxLength="50"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="55dp"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyzÇç "/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
                android:id="@+id/solicitanteEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/solicitante"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/colorAccent"
                android:backgroundTint="@color/colorAccent"
                android:maxLength="100"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="55dp"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyzÇçãÃéÉçÇ "/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
                android:id="@+id/dataSolEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dtSolicitacao"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/colorAccent"
                android:backgroundTint="@color/colorAccent"
                android:maxLength="100"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="55dp"
                android:enabled="false"
                />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
                android:id="@+id/dataPrevEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dtPrevisao"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/colorAccent"
                android:backgroundTint="@color/colorAccent"
                android:maxLength="16"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="55dp"
                android:digits="0123456789:/ "
           />
    </android.support.design.widget.TextInputLayout>

    <Spinner
            android:id="@+id/spinner"
            android:layout_width="352dp"
            android:layout_height="40dp"/>


    <android.support.design.widget.FloatingActionButton
            android:id="@+id/saveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/ic_save"
            app:elevation="4dp"
    />

</LinearLayout>